# powerGuard

./: .gitignore  persistence.json  pyoxidizer.bzl  pyproject.toml  report_pb2.py  setup.py  test2.txt  user_cmd.json
flows/: NoloadTest.json  backup_test.json  flows_modbus.json  full_load_test.json  global_var.json  global_variables.json  global_vars.json  modbus_server.json  no_load_test.json  noload_test.json  report_update.json  report_update_fetch.json  settings.json  spec.json
proto/: pData.proto  pData_pb2.py  report_pb2.py  ups_test_pb2.py
src/data/: data_manager.py
src/db/: test_reports.db
src/powerguard/: __init__.py  __main__.py  bootstrap.py  path_utils.py
src/powerguard/UPS_Test/: __init__.py  test_data.py
src/powerguard/data/: __init__.py  data_manager.py  fetcher.py  inserter.py  save_old.py  validator.py
src/powerguard/db/: test_reports.db
src/powerguard/gui/: __init__.py  main_gui.py  powerGUard.ui  powerGUard_ui.py
src/powerguard/report/: __init__.py  reportGenerator.py  test.py
src/powerguard/server/: __init__.py  node_red_server.py  server.py
src/proto/: descriptor.pb  message.proto  message_pb2.py  pData.proto  pData_pb2.py  report.proto  report_pb2.py  upsDefines.proto  upsDefines_pb2.py  ups_defines.proto  ups_defines_pb2.py  ups_test.proto  ups_test_pb2.py
src/server/: server.py
template/: Report_Template.docx  incremental_change.vue  schema.xsd  test_report_template.docx  ups.docx
template/context/: usercmd.json
template/template_nodes/: BACKUP_TEST.vue  FullloadTest.vue  NoLoadtest.vue  Report_Fecther.vue  backup_test_measurement.vue  backup_test_updated.vue  backuptest.vue  backuptest_final.vue  cgpt1.vue  cgpt3.vue  final_report_settings.vue  power_meter.vue  report_fetcher3.vue  report_fethcer2.vue  report_settings.vue  spec.vue  working_report_settings.vue
template/template_nodes/other_functions/: fetch_power.js  save_measurement.js  settings_update.js
