[project]
name = "powerguard"
version = "0.1.0"
description = "Automated UPS testing System"
readme = "README.md"
authors = [
    { name = "fahara02", email = "idea3d.faruk@gmail.com" }
]
requires-python = "==3.10.*"
dependencies = [
    "docx>=0.2.4",
    "docxtpl>=0.19.0",
    "lxml>=5.3.0",
    "netifaces>=0.11.0",
    "protobuf>=5.28.3",
    "pydantic>=2.9.2",
    "pyside6>=6.6.3.1",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
    "xmlschema>=3.4.3",
]

[dependency-groups]
dev = [
    "ruff>=0.7.4",
    "black>=24.10.0",
    "pylint>=3.3.1",
    "pytest>=8.3.3",
]

[project.scripts]
powerguard = "powerguard.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


